<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/partidos"
            android:icon="@drawable/pelota"
            android:title="@string/partidos" />
        <item
            android:id="@+id/calendario"
            android:icon="@drawable/calendario"
            android:title="@string/calendario" />
        <item
            android:id="@+id/clasificacion"
            android:icon="@drawable/trophy"
            android:title="@string/Clasificacion" />
        <item
            android:id="@+id/favoritos"
            android:icon="@drawable/estrella"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/goleadores"
            android:icon="@drawable/bota"
            android:title="@string/goleadores" />
    </group>

</menu>

