<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danielmartinezg1.ligasantander.EquipoFavfragment">

    <!-- TODO: Update blank fragment layout -->

    <ListView
        android:id="@+id/listViewFav"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/goles"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/nombrejug"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/nombrejugadores"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goles"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="10dp"
        android:text="@string/goles"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/asistencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="10dp"
        android:text="@string/assistencias"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
