<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.danielmartinezg1.ligasantander.PartidosFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_toRightOf="@+id/button"
        android:layout_toStartOf="@+id/imageView2"
        android:text="@string/partidos"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/puntos_suspensivos"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/match_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/match_list"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/pelota"
        android:contentDescription="@string/todo" />

</RelativeLayout>
